--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       onclick="introduce()"
     >
       <div id="inner">
-        <h1>지원동기</h1>
+        <h1>10227 지원동기</h1>
         <h3>아무곳이나 클릭해주세요.</h3>
       </div>
     </div>
