--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
       font-weight: 400;
       color: #fcf6f5;
       text-align: center;
+      
+      word-break: keep-all;
     }
 
     button {
